Refactor project structure by removing unused components and relocating utilities (#139)
* remove: delete aggregate module and AggregatorProcessor plugin

Removes the in-memory AggregateStore implementation and all related test code from the messaging module, along with the AggregatorProcessor plugin that depended on it. These components were unused in the current workflow system.

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>

* chore: cleaning up the project

* refactor: move SpelUtils from messaging to plugin-api module

SpelUtils is used by multiple processor plugins in the internal-core module,
which depends on plugin-api. By moving the utility to plugin-api, we eliminate
a cross-module dependency (internal-core -> messaging) and place the utility
closer to its primary consumers.

- Create com.infenia.yukta.plugin.util.SpelUtils in plugin-api
- Update imports in 8 processor files in internal-core
- Remove coverage exception from messaging module
- Delete original file from messaging module

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>

* refactor: move SpelUtils to plugin-api and update PMD rules

- Relocate SpelUtils from messaging to plugin-api to broaden availability
- Update processor references to the new SpelUtils package
- Adjust PMD rules:
    - Allow snake_case for JUnit 5 test methods
    - Exclude UnitTestContainsTooManyAsserts rule
- Simplify messaging module coverage configuration
- Update Gradle lockfiles across multiple modules
- Apply minor formatting fix to ApiResponse

---------

Co-authored-by: Claude Haiku 4.5 <noreply@anthropic.com>