@@ -16,30 +16,30 @@
 package com.infenia.yukta.message;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.time.Instant;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import lombok.NoArgsConstructor;
 import org.junit.jupiter.api.Test;
 
+/** Tests for {@link DefaultMessage}. */
+@NoArgsConstructor
+@SuppressWarnings({"PMD.TooManyMethods", "PMD.AvoidDuplicateLiterals", "PMD.ShortVariable"})
 class DefaultMessageTest {
 
   @Test
   void testCoreAccessors() {
-    String id = "id1";
-    String traceId = "t1";
-    String correlationId = "c1";
-    String replyTo = "r1";
-    Instant now = Instant.now();
-    String payload = "data";
+    final String id = "id1";
+    final String traceId = "t1";
+    final String correlationId = "c1";
+    final String replyTo = "r1";
+    final Instant now = Instant.now();
+    final String payload = "data";
 
-    DefaultMessage<String> msg =
+    final DefaultMessage<String> msg =
         new DefaultMessage<>(
             id,
             traceId,
@@ -64,96 +64,99 @@ class DefaultMessageTest {
             "node",
             "wf1");
 
-    assertEquals(id, msg.getMessageId());
-    assertEquals(traceId, msg.getTraceId());
-    assertEquals(correlationId, msg.getCorrelationId());
-    assertEquals(replyTo, msg.getReplyTo());
-    assertEquals(1000L, msg.getExpiration());
-    assertEquals("fmt", msg.getFormatIndicator());
-    assertEquals(Map.of("k", "v"), msg.getMetadata());
-    assertEquals(List.of("h1"), msg.getMessageHistory());
-    assertEquals("s1", msg.getSequenceId());
-    assertEquals(1, msg.getSequenceNumber());
-    assertEquals(10, msg.getSequenceSize());
-    assertEquals(5, msg.getPriority());
-    assertTrue(msg.isControlMessage());
-    assertEquals("orig", msg.getOrigDest());
-    assertEquals("fail", msg.getFailureReason());
-    assertEquals("detail", msg.getExceptionDetail());
-    assertEquals(2, msg.getRetryCount());
-    assertEquals(payload, msg.getPayload());
-    assertEquals(now.toEpochMilli(), msg.getTimestamp());
-    assertEquals("port", msg.getSourcePort());
-    assertEquals("node", msg.getSourceNodeId());
-    assertFalse(msg.isLastInSequence());
+    assertThat(msg.getMessageId()).isEqualTo(id);
+    assertThat(msg.getTraceId()).isEqualTo(traceId);
+    assertThat(msg.getCorrelationId()).isEqualTo(correlationId);
+    assertThat(msg.getReplyTo()).isEqualTo(replyTo);
+    assertThat(msg.getExpiration()).isEqualTo(1000L);
+    assertThat(msg.getFormatIndicator()).isEqualTo("fmt");
+    assertThat(msg.getMetadata()).isEqualTo(Map.of("k", "v"));
+    assertThat(msg.getMessageHistory()).isEqualTo(List.of("h1"));
+    assertThat(msg.getSequenceId()).isEqualTo("s1");
+    assertThat(msg.getSequenceNumber()).isEqualTo(1);
+    assertThat(msg.getSequenceSize()).isEqualTo(10);
+    assertThat(msg.getPriority()).isEqualTo(5);
+    assertThat(msg.isControlMessage()).isTrue();
+    assertThat(msg.getOrigDest()).isEqualTo("orig");
+    assertThat(msg.getFailureReason()).isEqualTo("fail");
+    assertThat(msg.getExceptionDetail()).isEqualTo("detail");
+    assertThat(msg.getRetryCount()).isEqualTo(2);
+    assertThat(msg.getPayload()).isEqualTo(payload);
+    assertThat(msg.getTimestamp()).isEqualTo(now.toEpochMilli());
+    assertThat(msg.getSourcePort()).isEqualTo("port");
+    assertThat(msg.getSourceNodeId()).isEqualTo("node");
+    assertThat(msg.isLastInSequence()).isFalse();
   }
 
   @Test
   void testSequenceLogic() {
-    Message<String> msg = DefaultMessage.create(null, "p").withSequence("s", 5, 5);
-    assertTrue(msg.isLastInSequence());
+    final Message<String> msg = DefaultMessage.create(null, "p").withSequence("s", 5, 5);
+    assertThat(msg.isLastInSequence()).isTrue();
+  }
 
-    Message<String> msg2 = DefaultMessage.create(null, "p").withSequence("s", 1, 5);
-    assertFalse(msg2.isLastInSequence());
+  @Test
+  void testSequenceLogic2() {
+    final Message<String> msg2 = DefaultMessage.create(null, "p").withSequence("s", 1, 5);
+    assertThat(msg2.isLastInSequence()).isFalse();
+  }
+
+  @Test
+  void testSequenceLogicZeroSize() {
+    final Message<String> msg = DefaultMessage.create(null, "p").withSequence("s", 0, 0);
+    assertThat(msg.isLastInSequence()).isFalse();
   }
 
   @Test
   void testFluentWitherMethods() {
-    DefaultMessage<String> msg = DefaultMessage.create(UUID.randomUUID(), "p");
+    final DefaultMessage<String> msg = DefaultMessage.create(UUID.randomUUID(), "p");
 
-    assertEquals("t1", msg.withTraceId("t1").getTraceId());
-    Instant now = Instant.now();
-    assertEquals(now.toEpochMilli(), msg.withTimestamp(now).getTimestamp());
-    assertEquals("c1", msg.withCorrelationId("c1").getCorrelationId());
-    assertEquals("r1", msg.withReplyTo("r1").getReplyTo());
-    assertEquals("p1", msg.withSourcePort("p1").getSourcePort());
-    assertEquals("n1", msg.withSourceNodeId("n1").getSourceNodeId());
-    assertEquals(500L, msg.withExpiration(500L).getExpiration());
-    assertEquals("fmt", msg.withFormatIndicator("fmt").getFormatIndicator());
-    assertTrue(msg.withAddedHistory("node").getMessageHistory().contains("node"));
-    assertEquals(9, msg.withPriority(9).getPriority());
-    assertTrue(msg.withControl(true).isControlMessage());
+    assertThat(msg.withTraceId("t1").getTraceId()).isEqualTo("t1");
+    final Instant now = Instant.now();
+    assertThat(msg.withTimestamp(now).getTimestamp()).isEqualTo(now.toEpochMilli());
+    assertThat(msg.withCorrelationId("c1").getCorrelationId()).isEqualTo("c1");
+    assertThat(msg.withReplyTo("r1").getReplyTo()).isEqualTo("r1");
+    assertThat(msg.withSourcePort("p1").getSourcePort()).isEqualTo("p1");
+    assertThat(msg.withSourceNodeId("n1").getSourceNodeId()).isEqualTo("n1");
+    assertThat(msg.withExpiration(500L).getExpiration()).isEqualTo(500L);
+    assertThat(msg.withFormatIndicator("fmt").getFormatIndicator()).isEqualTo("fmt");
+    assertThat(msg.withAddedHistory("node").getMessageHistory()).contains("node");
+    assertThat(msg.withPriority(9).getPriority()).isEqualTo(9);
+    assertThat(msg.withControl(true).isControlMessage()).isTrue();
 
-    var failed = msg.withFailure("o", "r", "d");
-    assertEquals("o", failed.getOrigDest());
-    assertEquals("r", failed.getFailureReason());
+    final Message<String> failed = msg.withFailure("o", "r", "d");
+    assertThat(failed.getOrigDest()).isEqualTo("o");
+    assertThat(failed.getFailureReason()).isEqualTo("r");
 
-    assertEquals(5, msg.withRetryCount(5).getRetryCount());
-    assertEquals(1, msg.withIncrementedRetry().getRetryCount());
-    assertEquals(10, msg.withPayload(10).getPayload());
-    assertEquals("v", msg.withHeader("k", "v").getMetadata().get("k"));
-    assertEquals(Map.of("x", "y"), msg.withMetadata(Map.of("x", "y")).getMetadata());
+    assertThat(msg.withRetryCount(5).getRetryCount()).isEqualTo(5);
+    assertThat(msg.withIncrementedRetry().getRetryCount()).isEqualTo(1);
+    assertThat(msg.withPayload(10).getPayload()).isEqualTo(10);
+    assertThat(msg.withHeader("k", "v").getMetadata().get("k")).isEqualTo("v");
+    assertThat(msg.withMetadata(Map.of("x", "y")).getMetadata()).isEqualTo(Map.of("x", "y"));
   }
 
   @Test
   void testStaticFactories() {
-    UUID tid = UUID.randomUUID();
-    DefaultMessage<String> msg = DefaultMessage.create(tid, "p");
-    assertEquals(tid.toString(), msg.getTraceId());
+    final String msg = "msg";
+    assertThat(DefaultMessage.create(null, msg).getPayload()).isEqualTo(msg);
 
-    DefaultMessage<Integer> from = DefaultMessage.from(msg, 100);
-    assertEquals(msg.getMessageId(), from.getMessageId());
-    assertEquals(100, from.getPayload());
-
-    // Null traceId branch
-    assertEquals(null, DefaultMessage.create(null, "p").getTraceId());
+    final String from = "from";
+    assertThat(DefaultMessage.from(DefaultMessage.create(null, from), 10).getPayload())
+        .isEqualTo(10);
   }
 
   @Test
-  void testCompactConstructorNulls() {
-    DefaultMessage<String> msg =
+  void testCompactConstructorDefaults() {
+    final DefaultMessage<String> msg =
         new DefaultMessage<>(
             "id", null, null, null, 0, null, null, null, null, 0, 0, 0, false, null, null, null, 0,
             "p", null, null, null, null);
-
-    assertNotNull(msg.getMetadata());
-    assertNotNull(msg.getMessageHistory());
-    assertNotNull(msg.getTimestamp());
+    assertThat(msg.getMetadata()).isNotNull();
+    assertThat(msg.getMessageHistory()).isNotNull();
   }
 
   @Test
   void testCompactConstructorNullCoercion() {
-    DefaultMessage<String> msg =
+    final DefaultMessage<String> msg =
         new DefaultMessage<>(
             "id1", "trace1", "corr1", "reply1", 1000L, "format", null, null, "seq1", 1, 5, 2, false,
             "orig", "reason", "detail", 0, "payload", null, "port1", "node1", "wf1");
@@ -167,10 +170,10 @@ class DefaultMessageTest {
 
   @Test
   void testWithTraceId() {
-    DefaultMessage<String> original = DefaultMessage.create(UUID.randomUUID(), "payload");
-    String newTraceId = "newTrace123";
+    final DefaultMessage<String> original = DefaultMessage.create(UUID.randomUUID(), "payload");
+    final String newTraceId = "newTrace123";
 
-    Message<String> updated = original.withTraceId(newTraceId);
+    final Message<String> updated = original.withTraceId(newTraceId);
 
     assertThat(updated.getTraceId()).isEqualTo(newTraceId);
     assertThat(updated.getMessageId()).isEqualTo(original.getMessageId());
@@ -180,7 +183,7 @@ class DefaultMessageTest {
 
   @Test
   void testWithAddedHistory() {
-    DefaultMessage<String> original =
+    final DefaultMessage<String> original =
         new DefaultMessage<>(
             "id",
             "trace",
@@ -205,35 +208,20 @@ class DefaultMessageTest {
             "node",
             "wf");
 
-    Message<String> updated = original.withAddedHistory("node2");
+    final Message<String> updated = original.withAddedHistory("node2");
 
     assertThat(updated.getMessageHistory()).containsExactly("node1", "node2");
-    assertThat(original.getMessageHistory()).containsExactly("node1");
-    assertThat(updated.getMessageId()).isEqualTo(original.getMessageId());
+    assertThat(updated.getMessageHistory()).hasSize(2);
   }
 
   @Test
-  void testWithSequence() {
-    DefaultMessage<String> original = DefaultMessage.create(UUID.randomUUID(), "payload");
-
-    Message<String> updated = original.withSequence("seq123", 3, 5);
-
-    assertThat(updated.getSequenceId()).isEqualTo("seq123");
-    assertThat(updated.getSequenceNumber()).isEqualTo(3);
-    assertThat(updated.getSequenceSize()).isEqualTo(5);
-    assertThat(updated.isLastInSequence()).isFalse();
-
-    Message<String> lastMsg = original.withSequence("seq123", 5, 5);
-    assertThat(lastMsg.isLastInSequence()).isTrue();
-  }
-
-  @Test
+  @SuppressWarnings("PMD.UseConcurrentHashMap")
   void testMetadataImmutability() {
-    Map<String, Object> originalMetadata = new HashMap<>();
+    final Map<String, Object> originalMetadata = new HashMap<>();
     originalMetadata.put("key1", "value1");
     originalMetadata.put("key2", 42);
 
-    DefaultMessage<String> msg =
+    final DefaultMessage<String> msg =
         new DefaultMessage<>(
             "id",
             "trace",
@@ -269,11 +257,11 @@ class DefaultMessageTest {
 
   @Test
   void testHistoryImmutability() {
-    List<String> originalHistory = new java.util.ArrayList<>();
+    final List<String> originalHistory = new java.util.ArrayList<>();
     originalHistory.add("node1");
     originalHistory.add("node2");
 
-    DefaultMessage<String> msg =
+    final DefaultMessage<String> msg =
         new DefaultMessage<>(
             "id",
             "trace",
@@ -299,18 +287,19 @@ class DefaultMessageTest {
             "wf");
 
     originalHistory.add("node3");
-    originalHistory.remove(0);
+    originalHistory.removeFirst();
 
     assertThat(msg.getMessageHistory()).containsExactly("node1", "node2");
     assertThat(msg.getMessageHistory()).hasSize(2);
   }
 
   @Test
+  @SuppressWarnings("PMD.LawOfDemeter")
   void testCreateFactory() {
-    UUID traceId = UUID.randomUUID();
-    String payload = "testPayload";
+    final UUID traceId = UUID.randomUUID();
+    final String payload = "testPayload";
 
-    DefaultMessage<String> msg = DefaultMessage.create(traceId, payload);
+    final DefaultMessage<String> msg = DefaultMessage.create(traceId, payload);
 
     assertThat(msg.getMessageId()).isNotNull().isNotEmpty();
     assertThat(msg.getTraceId()).isEqualTo(traceId.toString());
@@ -327,18 +316,18 @@ class DefaultMessageTest {
 
   @Test
   void testFromFactory() {
-    UUID traceId = UUID.randomUUID();
-    String originalPayload = "original";
-    DefaultMessage<String> original = DefaultMessage.create(traceId, originalPayload);
+    final UUID traceId = UUID.randomUUID();
+    final String originalPayload = "original";
+    final DefaultMessage<String> original = DefaultMessage.create(traceId, originalPayload);
 
-    Message<String> withHeaders =
+    final Message<String> withHeaders =
         original
             .withCorrelationId("corrId")
             .withReplyTo("replyTo")
             .withHeader("headerKey", "headerValue");
 
-    Integer newPayload = 42;
-    DefaultMessage<Integer> from = DefaultMessage.from(withHeaders, newPayload);
+    final Integer newPayload = 42;
+    final DefaultMessage<Integer> from = DefaultMessage.from(withHeaders, newPayload);
 
     assertThat(from.getMessageId()).isEqualTo(withHeaders.getMessageId());
     assertThat(from.getTraceId()).isEqualTo(withHeaders.getTraceId());
